--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -20,7 +20,8 @@
 <body>
     <div class="header_con">
         <div class="header">
-            <a href="#" class="logo fl"><img src="../../static/news/images/logo.png" alt="logo"></a>
+            {#href改为根路由url#}
+            <a href="/" class="logo fl"><img src="../../static/news/images/logo.png" alt="logo"></a>
            {% block categoryBlock %}
                 <ul class="menu fl">
                 {% for category in data.category_list %}
