--- a/info/templates/news/detail.html
+++ b/info/templates/news/detail.html
@@ -83,7 +83,19 @@
                     {% endif %}
                     <div class="comment_time fl">{{ comment.create_time }}</div>
                     {# a 标签新增属性 记录点赞的 ：新闻id、评论id #}{# 添加判断是否被点赞 控制类样式 #}
-                    <a href="javascript:;" class="comment_up {% if comment.is_like %} has_comment_up {% endif %} fr" data-commentid="{{ comment.id }}" data-newsid="{{ comment.news_id }}">赞</a>
+{#                    <a href="javascript:;" class="comment_up {% if comment.is_like %} has_comment_up {% endif %} fr" data-commentid="{{ comment.id }}" data-newsid="{{ comment.news_id }}">赞</a>#}
+                    <a href="javascript:;" class="comment_up
+                        {% if comment.is_like %}
+                            has_comment_up
+                        {% endif %} fr"
+                           data-commentid="{{ comment.id }}"
+                           data-likecount="{{ comment.like_count }}"
+                           data-newsid="{{ data.news.id }}">
+                        {% if comment.like_count > 0 %}
+                            {{ comment.like_count }}
+                        {% else %}
+                            赞
+                        {% endif %}</a>
                     <a href="javascript:;" class="comment_reply fr">回复</a>
                     <form class="reply_form fl" data-commentid="{{ comment.id }}" data-newsid="{{ data.news.id }}">
                         <textarea class="reply_input"></textarea>
