个人中心模板抽取

--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -57,6 +57,7 @@
     <div class="conter_con">
         {% block contentBlock %}
         {% endblock %}
+    {% block rankBlock %}
         <div class="rank_con fr">
         {% block authorBlock %}
             {% endblock %}
@@ -73,6 +74,7 @@
 
             </ul>
         </div>
+    {% endblock %}
 
     </div>
     <div class="footer">
