修改了性别无法选择的bug

--- a/info/templates/news/user_collection.html
+++ b/info/templates/news/user_collection.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/news/css/jquery.pagination.css">
     <link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">
     <script type="text/javascript" src="../../static/news/js/jquery-1.12.4.min.js"></script>
+    {#pagination加载分页的库#}
 	<script type="text/javascript" src="../../static/news/js/jquery.pagination.min.js"></script>
 </head>
 <body class="inframe_body">
