--- a/info/templates/news/user_collection.html
+++ b/info/templates/news/user_collection.html
@@ -34,7 +34,7 @@
                     currentPage: {{ data.current_page }},
                     totalPage: {{ data.total_page }},
                     callback: function(current) {
-                        alert('ok!');
+                         window.location.href = "/user/user_collection?page=" + current
                     }
                 });
             });
