前后端分离式的实现被关注用户的新闻列表，后端传回数据，前端js拼组数据，修改模板

--- a/info/templates/news/other.html
+++ b/info/templates/news/other.html
@@ -53,7 +53,7 @@
                             currentPage: 2,
                             totalPage: 3,
                             callback: function(current) {
-                                alert('ok!');
+                                getNewsList(current)
                             }
                         });
                     });
