--- a/info/templates/news/detail.html
+++ b/info/templates/news/detail.html
@@ -114,12 +114,12 @@
         {# 用户发布的新闻显示作者信息#}
      {% if data.news.author %}
         <div class="author_card">
-            <a href="{{ url_for('user/other_user') }}?user_id={{ data.news.author.id }}" class="author_pic"><img src="{% if data.news.author.avatar_url %}
+            <a href="{{ url_for('profile.other_user') }}?user_id={{ data.news.author.id }}" class="author_pic"><img src="{% if data.news.author.avatar_url %}
             {{ data.news.author.avatar_url }}
             {% else %}
             ../../static/news/images/user_pic.png
             {% endif %}" alt="author_pic"></a>
-            <a href="{{ url_for('user/other_user') }}?user_id={{ data.news.author.id }}" class="author_name">{{ data.news.author.nick_name }}</a>
+            <a href="{{ url_for('profile.other_user') }}?user_id={{ data.news.author.id }}" class="author_name">{{ data.news.author.nick_name }}</a>
             <div class="author_resume">签名：{{ data.news.author.signature }}</div>
             <div class="writings"><span>总篇数</span><b>{{ data.news.author.news_count }}</b></div>
             <div class="follows"><span>粉丝</span><b>{{ data.news.author.followers_count }}</b></div>
